fix restart message whitespace

--- a/src/components/game.styl
+++ b/src/components/game.styl
@@ -162,12 +162,12 @@ img
   font-family Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
   font-size $base * 1.3
   font-weight bold
-  height $base * 4
+  height $base * 4.05
   justify-items center
   left $base * 16.98
   line-height $base * 0.7
   position absolute
-  top $base * 18
+  top $base * 17.95
   user-select none
   width $base * 9
 
